# ros_industrial_training

./: CMakeLists.txt  README.md  package.xml
include/ros_industrial_training/: ar_navigation.hpp
launch/: ar_navigation.launch  turtlebot3_startup.launch  turtlebot3_world_markers.launch
models/marker0/: model-1_4.sdf  model-1_5.sdf  model.sdf
models/marker1/: model-1_4.sdf  model-1_5.sdf  model.sdf
models/marker10/: model-1_4.sdf  model-1_5.sdf  model.sdf
models/marker11/: model-1_4.sdf  model-1_5.sdf  model.sdf
models/marker12/: model-1_4.sdf  model-1_5.sdf  model.sdf
models/marker13/: model-1_4.sdf  model-1_5.sdf  model.sdf
models/marker14/: model-1_4.sdf  model-1_5.sdf  model.sdf
models/marker15/: model-1_4.sdf  model-1_5.sdf  model.sdf
models/marker16/: model-1_4.sdf  model-1_5.sdf  model.sdf
models/marker17/: model-1_4.sdf  model-1_5.sdf  model.sdf
models/marker2/: model-1_4.sdf  model-1_5.sdf  model.sdf
models/marker3/: model-1_4.sdf  model-1_5.sdf  model.sdf
models/marker4/: model-1_4.sdf  model-1_5.sdf  model.sdf
models/marker5/: model-1_4.sdf  model-1_5.sdf  model.sdf
models/marker6/: model-1_4.sdf  model-1_5.sdf  model.sdf
models/marker7/: model-1_4.sdf  model-1_5.sdf  model.sdf
models/marker8/: model-1_4.sdf  model-1_5.sdf  model.sdf
models/marker9/: model-1_4.sdf  model-1_5.sdf  model.sdf
rviz/: view.rviz
src/: ar_navigation.cpp
worlds/: turtlebot3_world_markers.world
