<?xml version="1.0"?>
<package format="2">
  <name>ros_industrial_training</name>
  <version>0.0.0</version>
  <description>The ros_industrial_training package</description>
  <maintainer email="joep@todo.todo">Joep Tool</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>ar_track_alvar_msgs</exec_depend>
  <exec_depend>ar_track_alvar</exec_depend>
  <exec_depend>turtlebot3_navigation</exec_depend>

</package>
